--- a/spring-batch-workshop/spring-batch/pom.xml
+++ b/spring-batch-workshop/spring-batch/pom.xml
@@ -81,6 +81,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
