--- a/spring-batch-workshop/spring-batch/src/main/resources/application.properties
+++ b/spring-batch-workshop/spring-batch/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.servletPath=/*
+ENVIRONMENT=hsql
+spring.application.index=index.html
 spring.batch.job.enabled=false
+spring.freemarker.checkTemplateLocation=false
+server.port=8081
