changed packages a bit

--- a/spring-batch-workshop/spring-batch/src/main/resources/batch-hsql.properties
+++ b/spring-batch-workshop/spring-batch/src/main/resources/batch-hsql.properties
@@ -11,7 +11,7 @@ batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.Hs
 batch.schema.script=classpath*:/org/springframework/batch/core/schema-hsqldb.sql
 batch.drop.script=classpath*:/org/springframework/batch/core/schema-drop-hsqldb.sql
 batch.business.schema.script=classpath:/business-schema-hsqldb.sql
-batch.job.configuration.package=be.ordina.springbatch.jobs
+batch.job.configuration.package=be.ordina.springbatch.batch.jobs
 
 # Non-platform dependent settings that you might like to change
  batch.data.source.init=true
